--- a/stunclient.conf
+++ b/stunclient.conf
@@ -1,3 +1,3 @@
 # stunclient.conf
-stun_server     = stun.iptel.org
-http_server     = www.google.com
+stun_server     = stun.xten.com
+http_server     = www.apple.com
